tests/baselines/reference/better_subType_assignable_to_superType_error_messsage.errors.txt
better_subType_assignable_to_superType_error_messsage.ts(3,3): error TS2322: Type 'SuperType' is not assignable to type 'SubType'.
  'SubType' is constrained to be a subtype of 'SuperType'.
better_subType_assignable_to_superType_error_messsage.ts(6,3): error TS2322: Type 'SuperType' is not assignable to type 'SubType2'.
  'SubType2' is constrained to be a subtype of 'SuperType'.


==== better_subType_assignable_to_superType_error_messsage.ts (2 errors) ====
    function parameterExtendsOtherParameter<SuperType, SubType extends SuperType, SubType2 extends SubType>(superType: SuperType, subtype: SubType, subType2: SubType2) {
      //ensures that supertypes are not assignable to subtypes
      subtype = superType;//error
      ~~~~~~~
!!! error TS2322: Type 'SuperType' is not assignable to type 'SubType'.
!!! error TS2322:   'SubType' is constrained to be a subtype of 'SuperType'.
!!! related TS2208 better_subType_assignable_to_superType_error_messsage.ts:1:41: This type parameter might need an `extends SubType` constraint.
      
      //ensures that supertypes are not assignable to 'grandchild' subtypes
      subType2 = superType;//error
      ~~~~~~~~
!!! error TS2322: Type 'SuperType' is not assignable to type 'SubType2'.
!!! error TS2322:   'SubType2' is constrained to be a subtype of 'SuperType'.
!!! related TS2208 better_subType_assignable_to_superType_error_messsage.ts:1:41: This type parameter might need an `extends SubType2` constraint.
    
      superType = subType2;//ok
    }
    